--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,23 +1,20 @@
-
-
 body{
+    width: auto;
     margin: auto;
+    overflow: scroll;
 }
 
-header{
-    display: flex;
-    justify-content: space-between;
-    padding: 0 5vw;
+header,
+footer{
     background-color: #f3e9f1;
 }
 
 ul{
-    display: flex;
-    flex-direction: row;
+    padding: 0;
     list-style: none;
 }
 
-li{
+header li{
     padding: 1vw;
 }
 
@@ -27,21 +24,64 @@ a{
     text-decoration: none;
 }
 
-ul a:hover{
-    border-bottom: 2px solid black;
+a:hover{
+    text-decoration: none;
+    color: #e58300;
 }
 
 article
 {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    height: 1400px;
+    background: url(../../images/vcam_1.jpg) no-repeat center;
 }
 
 article a{
+    margin-bottom: 50px;
     padding: 10px;
     border-radius: 200px;
-    border: solid 2px ;
-    background: linear-gradient(to left,#905dfe, #e58300);
+    border: solid 2px #f3e9f1;
+    color: #f3e9f1;
+    background-color: black;
 }
+
+article a:hover{
+    text-decoration: none;
+    color: #e58300;
+    border-color: #e58300;
+}
+
+h1{
+    margin-top: 80px;
+    font-size: 3rem;
+    color: #e58300;
+}
+
+h2{
+    font-size: 3rem;
+    color: #e58300;
+}
+
+.reseaux{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+@media screen and (min-width:873px){
+    footer .services{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+
+    header img{
+        font-size: 0.8rem;
+    }
+}
+
+
 
