--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,11 @@
-body{
-    width: auto;
-    margin: auto;
-    overflow: scroll;
-}
-
 header,
+main,
 footer{
     background-color: #f3e9f1;
 }
 
 ul{
-    padding: 0;
     list-style: none;
-}
-
-header li{
-    padding: 1vw;
 }
 
 a{
@@ -25,23 +15,15 @@ a{
 }
 
 a:hover{
-    text-decoration: none;
     color: #e58300;
 }
 
-article
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+article{
     height: 1400px;
     background: url(../../images/vcam_1.jpg) no-repeat center;
 }
 
 article a{
-    margin-bottom: 50px;
-    padding: 10px;
     border-radius: 200px;
     border: solid 2px #f3e9f1;
     color: #f3e9f1;
@@ -49,13 +31,11 @@ article a{
 }
 
 article a:hover{
-    text-decoration: none;
     color: #e58300;
     border-color: #e58300;
 }
 
 h1{
-    margin-top: 80px;
     font-size: 3rem;
     color: #e58300;
 }
@@ -65,22 +45,9 @@ h2{
     color: #e58300;
 }
 
-.reseaux{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
-}
-
-@media screen and (min-width:873px){
-    footer .services{
-        display: flex;
-        justify-content: center;
-        margin-bottom: 10px;
-    }
-
-    header img{
-        font-size: 0.8rem;
-    }
+hr{
+    height: 5px;
+    color: #e58300;
 }
 
 
