--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,31 +14,6 @@ a{
     text-decoration: none;
 }
 
-a:hover{
-    color: #e58300;
-}
-
-article{
-    height: 1400px;
-    background: url(../../images/vcam_1.jpg) no-repeat center;
-}
-
-article a{
-    border-radius: 200px;
-    border: solid 2px #f3e9f1;
-    color: #f3e9f1;
-    background-color: black;
-}
-
-article a:hover{
-    color: #e58300;
-    border-color: #e58300;
-}
-
-figure{
-    background-color: #e58300 ;
-}
-
 h1{
     font-size: 3rem;
     color: #e58300;
@@ -57,6 +32,10 @@ h3{
 .line{
     height: 3px;
     background-color: #e58300;
+}
+
+.active{
+    text-decoration: underline;
 }
 
 
