--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,5 +38,15 @@ h3{
     text-decoration: underline;
 }
 
+.img-dimension{
+    height: 200px;
+    overflow: hidden;
+    object-fit: cover;
+    object-position: center;
+}
 
-
+@media screen and (min-width:1200px) {
+    figcaption{
+    height: 300px;
+    }
+}
