--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,15 +40,15 @@ h3{
     text-decoration: underline;
 }
 
-.img-dimension{
+.picture{
     height: 200px;
     overflow: hidden;
     object-fit: cover;
     object-position: center;
 }
 
-@media screen and (min-width:1200px) {
-    figcaption{
-    height: 300px;
-    }
+.hover:hover{
+    transform: scale(1.05);
+    transition: 500ms;
 }
+
