--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,3 +52,20 @@ h3{
     transition: 500ms;
 }
 
+@media (max-width: 700px){
+    table thead {
+    display: none;
+    }
+    table tr{
+    display: block;
+    margin-bottom: 40px;
+    }
+    table td {
+    display: block;
+    }
+    table td:before {
+    float: left;
+    font-weight: bold;
+    }
+    }
+
