--- a/public/views/produit.html
+++ b/public/views/produit.html
@@ -45,9 +45,9 @@
             <h1 class="my-0 py-5">Personnalisez votre caméra !!!</h1>
             <div id="display" class="h-100 w-100 col-12 d-flex flex-column flex-xl-row align-items-center justify-content-xl-center container p-5">
             </div>
-            <div class="mb-5">
-                <a class="lien border border-2 border-dark rounded-pill p-3 me-5" href="/public/index.html">Retour aux produits</a>
-                <a class="lien border border-2 border-dark rounded-pill p-3" href="/public/views/panier.html">Voir le panier</a>
+            <div class="d-flex flex-column flex-md-row justify-content-md-center align-items-center">
+                <a class="lien border border-2 border-dark rounded-pill p-3 mb-3 me-md-2" href="/public/index.html">Retour aux produits</a>
+                <a class="lien border border-2 border-dark rounded-pill p-3 mb-3" href="/public/views/panier.html">Voir le panier</a>
             </div>
             
             <div class="line"></div>
