--- a/public/views/confirmation.html
+++ b/public/views/confirmation.html
@@ -11,7 +11,7 @@
         <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/css/bootstrap.min.css" as="style">
         <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" as="style"/>
         <link rel="preload" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" as="style">
-        <link rel="preload" href="../css/style.css" as="style">
+        <link rel="preload" href="/public/css/style.css" as="style">
 
         <meta name="description" content="Orinoco, votre site d'achat de cameras vintages sur internet à prix abordables.">
         <meta name="author" content="Julien Brazzalotto">
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="/public/css/style.css">
     </head>
     <body>
         <header>
@@ -31,10 +31,10 @@
                 <div class="justify-content-lg-end col collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav p-0">
                         <li class="nav-item p-3">
-                        <a class="nav-link" href="index.html">Accueil</a>
+                        <a class="nav-link" href="/public/index.html">Accueil</a>
                         </li>
                         <li class="nav-item p-3">
-                        <a class="nav-link active" aria-current="page" href="./panier.html"><i class="fas fa-shopping-cart"></i></a>
+                        <a class="nav-link active" aria-current="page" href="/public/views/panier.html"><i class="fas fa-shopping-cart"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -42,14 +42,14 @@
             <div class="line"></div>
         </header>
         <main class="text-center">
-            <p>Nous validons votre commande !!! <br>Votre numéro de commande est:</p>
+            <p>Nous validons votre commande !!! <br>Votre numéro de commande est: <span id="order"></span></p>
             <div class="line"></div>
         </main>
         <footer class="text-center">
             <h3 class="py-5">Orinoco</h3>
             <ul class="d-flex flex-column flex-lg-row justify-content-center col-md-12 p-0">
                 <li><a class="px-5" href="#">L'entreprise</a></li>
-                <li><a class="px-5" href="produits.html">Nos produits</a></li>
+                <li><a class="px-5" href="/public/index.html">Nos produits</a></li>
                 <li><a class="px-5" href="#">Nos Services</a></li>
                 <li><a class="px-5" href="mailto:contact@oronico.fr">Contact</a></li>
             </ul>
