--- a/public/views/panier.html
+++ b/public/views/panier.html
@@ -11,7 +11,7 @@
         <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/css/bootstrap.min.css" as="style">
         <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" as="style"/>
         <link rel="preload" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" as="style">
-        <link rel="preload" href="../public/css/style.css" as="style">
+        <link rel="preload" href="/public/css/style.css" as="style">
 
         <meta name="description" content="Orinoco, votre site d'achat de cameras vintages sur internet à prix abordables.">
         <meta name="author" content="Julien Brazzalotto">
@@ -19,12 +19,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="/public/css/style.css">
     </head>
     <body>
         <header>
             <nav class="col-12 container-fluid navbar navbar-expand-lg navbar-light px-4">
-                <a class="col-7 navbar-brand" href="index.html"><img src="/images/logo.webp" alt="Logo orinoco"></a>
+                <a class="col-7 navbar-brand" href="/public/index.html"><img src="/images/logo.webp" alt="Logo orinoco"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -44,7 +44,7 @@
         <main class="text-center">
             <section class="d-flex flex-column align-items-center">
                 <h1 class="my-0 py-5">Votre panier</h1>
-                <table class=" border border-3 border-dark mb-5">
+                <table class="border border-3 border-dark mb-5">
                     <thead>
                         <tr>
                             <th class="px-5">Article</th>
