--- a/public/views/panier.html
+++ b/public/views/panier.html
@@ -44,7 +44,7 @@
         <main class="text-center">
             <section class="d-flex flex-column align-items-center">
                 <h1 class="my-0 py-5">Votre panier</h1>
-                <table class="border border-3 border-dark mb-5">
+                <table id="table" class="border border-3 border-dark mb-5">
                     <thead>
                         <tr>
                             <th class="px-5">Article</th>
@@ -65,33 +65,30 @@
                         </tr>
                     </tfoot>
                 </table>
+                <div id="clear"></div>
             </section>
             <section>
                 <h2 class="text-dark">Adresse de livraison</h2>
                 <form method="GET">
-                    <ul>
+                    <ul class="p-0">
                         <li class="m-2">
-                            <label for="firstname">Prénom:</label>
-                            <input type="text" id="firstname" required>
+                            <input type="text" id="firstname" class="w-25" placeholder="Prénom" required>
                         </li>
                         <li class="m-2">
-                            <label for="lastname">Nom:</label>
-                            <input type="text" id="lastname" required>
+                            <input type="text" id="lastname" class="w-25" placeholder="Nom" required>
                         </li>
                         <li class="m-2">
-                            <label for="adress">Adresse:</label>
-                            <input type="text" id="adress" required>
+                            <input type="text" id="adress" class="w-25" placeholder="Adresse" required>
                         </li>
                         <li class="m-2">
-                            <label for="city">Ville:</label>
-                            <input type="text" id="city" required>
+                            <input type="text" id="city" class="w-25" placeholder="Ville" required>
                         </li>
                         <li class="m-2">
-                            <label for="mail">Email:</label>
-                            <input type="email" id="mail" required>
+                            
+                            <input type="email" id="mail" class="w-25" placeholder="Email" required>
                         </li>
                         <li>
-                            <input class="bg-dark text-white" type="submit" value="Valider votre commande">
+                            <input class="bg-dark text-white rounded-pill border-0 fs-5 p-2" type="submit" value="Valider votre commande">
                         </li>
                     </ul>
                 </form>
