impossible de récupérer l'orderId

--- a/public/views/confirmation.html
+++ b/public/views/confirmation.html
@@ -24,7 +24,7 @@
     <body>
         <header>
             <nav class="col-12 container-fluid navbar navbar-expand-lg navbar-light px-4">
-                <a class="col-7 navbar-brand" href="index.html"><img src="/images/logo.webp" alt="Logo orinoco"></a>
+                <a class="col-7 navbar-brand" href="/public/index.html"><img src="/images/logo.webp" alt="Logo orinoco"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
