--- a/public/views/panier.html
+++ b/public/views/panier.html
@@ -72,23 +72,22 @@
                 <form method="GET">
                     <ul class="p-0">
                         <li class="m-2">
-                            <input type="text" id="firstname" class="w-25" placeholder="Prénom" required>
+                            <input type="text" id="firstName" class="w-25" placeholder="Prénom" required>
                         </li>
                         <li class="m-2">
-                            <input type="text" id="lastname" class="w-25" placeholder="Nom" required>
+                            <input type="text" id="lastName" class="w-25" placeholder="Nom" required>
                         </li>
                         <li class="m-2">
-                            <input type="text" id="adress" class="w-25" placeholder="Adresse" required>
+                            <input type="text" id="address" class="w-25" placeholder="Adresse" required>
                         </li>
                         <li class="m-2">
                             <input type="text" id="city" class="w-25" placeholder="Ville" required>
                         </li>
                         <li class="m-2">
-                            
-                            <input type="email" id="mail" class="w-25" placeholder="Email" required>
+                            <input type="email" id="email" class="w-25" placeholder="Email" required>
                         </li>
                         <li>
-                            <input class="bg-dark text-white rounded-pill border-0 fs-5 p-2" type="submit" value="Valider votre commande">
+                            <input id="submit" class="bg-dark text-white rounded-pill border-0 fs-5 p-2" type="submit" value="Valider votre commande">
                         </li>
                     </ul>
                 </form>
