page confirmation OK

--- a/public/views/confirmation.html
+++ b/public/views/confirmation.html
@@ -42,7 +42,8 @@
             <div class="line"></div>
         </header>
         <main class="text-center">
-            <p>Nous validons votre commande !!! <br>Votre numéro de commande est: <span id="order"></span></p>
+            <div id="order">
+            </div>
             <div class="line"></div>
         </main>
         <footer class="text-center">
@@ -66,5 +67,6 @@
         </footer>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/js/bootstrap.min.js"></script>
+        <script src="/public/js/confirmation.js"></script>
     </body>
 </html>
