--- a/public/views/panier.html
+++ b/public/views/panier.html
@@ -69,7 +69,7 @@
             </section>
             <section>
                 <h2 class="text-dark">Adresse de livraison</h2>
-                <form method="GET">
+                <form>
                     <ul class="p-0">
                         <li class="m-2">
                             <input type="text" id="firstName" class="w-25" placeholder="Prénom" required>
