--- a/public/views/produit.html
+++ b/public/views/produit.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personnalisation-Orinoco achat de cameras vintages</title>
 
-        <link rel="icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="../../favicon.ico">
         
         <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/css/bootstrap.min.css" as="style">
         <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" as="style"/>
@@ -24,17 +24,17 @@
     <body>
         <header>
             <nav class="col-12 container-fluid navbar navbar-expand-lg navbar-light px-4">
-                <a class="col-7 navbar-brand" href="/public/index.html"><img src="/images/logo.webp" alt="Logo orinoco"></a>
+                <a class="col-7 navbar-brand" href="../index.html"><img src="../../images/logo.webp" alt="Logo orinoco"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="justify-content-lg-end col collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav p-0">
                         <li class="nav-item p-3">
-                        <a class="nav-link" href="/public/index.html">Accueil</a>
+                        <a class="nav-link" href="../index.html">Accueil</a>
                         </li>
                         <li class="nav-item p-3">
-                        <a class="nav-link" href="/public/views/panier.html"><i class="fas fa-shopping-cart"></i></a>
+                        <a class="nav-link" href="../views/panier.html"><i class="fas fa-shopping-cart"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -46,8 +46,8 @@
             <div id="display" class="h-100 w-100 col-12 d-flex flex-column flex-xl-row align-items-center justify-content-xl-center container p-5">
             </div>
             <div class="d-flex flex-column flex-md-row justify-content-md-center align-items-center">
-                <a class="lien border border-2 border-dark rounded-pill p-3 mb-3 me-md-2" href="/public/index.html">Retour aux produits</a>
-                <a class="lien border border-2 border-dark rounded-pill p-3 mb-3" href="/public/views/panier.html">Voir le panier</a>
+                <a class="lien border border-2 border-dark rounded-pill p-3 mb-3 me-md-2" href="../index.html">Retour aux produits</a>
+                <a class="lien border border-2 border-dark rounded-pill p-3 mb-3" href="../views/panier.html">Voir le panier</a>
             </div>
             <div class="line"></div>
         </main>
@@ -55,7 +55,7 @@
             <h3 class="py-5">Orinoco</h3>
             <ul class="d-flex flex-column flex-lg-row justify-content-center col-md-12 p-0">
                 <li><a class="px-5" href="#">L'entreprise</a></li>
-                <li><a class="px-5" href="/public/index.html">Nos produits</a></li>
+                <li><a class="px-5" href="../index.html">Nos produits</a></li>
                 <li><a class="px-5" href="#">Nos Services</a></li>
                 <li><a class="px-5" href="mailto:contact@oronico.fr">Contact</a></li>
             </ul>
@@ -72,6 +72,6 @@
         </footer>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/js/bootstrap.min.js"></script>
-        <script src="/public/js/produit.js" defer></script>
+        <script src="../js/produit.js" defer></script>
     </body>
 </html>
