condition champs vide + sécu html + page confirm

--- a/public/views/panier.html
+++ b/public/views/panier.html
@@ -72,10 +72,10 @@
                 <form>
                     <ul class="p-0">
                         <li class="m-2">
-                            <input type="text" id="firstName" class="w-25" placeholder="Prénom" required>
+                            <input type="text" id="firstName" class="w-25" placeholder="Prénom" minlength="2" maxlength="25" required>
                         </li>
                         <li class="m-2">
-                            <input type="text" id="lastName" class="w-25" placeholder="Nom" required>
+                            <input type="text" id="lastName" class="w-25" placeholder="Nom" minlength="2" maxlength="25" required>
                         </li>
                         <li class="m-2">
                             <input type="text" id="address" class="w-25" placeholder="Adresse" required>
