indexation et style-list sur panier.html

--- a/public/views/panier.html
+++ b/public/views/panier.html
@@ -70,7 +70,7 @@
             <section>
                 <h2 class="text-dark">Adresse de livraison</h2>
                 <form>
-                    <ul class="p-0">
+                    <ul class="p-0 list-unstyled">
                         <li class="m-2">
                             <input type="text" id="firstName" class="w-25" placeholder="Prénom" minlength="2" maxlength="25" required>
                         </li>
