codacy erreur rdv philippe

--- a/public/views/panier.html
+++ b/public/views/panier.html
@@ -78,13 +78,13 @@
                             <input type="text" id="lastName" class="w-25" placeholder="Nom" minlength="2" maxlength="25" required>
                         </li>
                         <li class="m-2">
-                            <input type="text" id="address" class="w-25" placeholder="Adresse" required>
+                            <input type="text" id="address" class="w-25" placeholder="Adresse" minlength="2" maxlength="255" required>
                         </li>
                         <li class="m-2">
-                            <input type="text" id="city" class="w-25" placeholder="Ville" required>
+                            <input type="text" id="city" class="w-25" placeholder="Ville" minlength="2" maxlength="200"required>
                         </li>
                         <li class="m-2">
-                            <input type="email" id="email" class="w-25" placeholder="Email" required>
+                            <input type="email" id="email" class="w-25" placeholder="Email" minlength="8" maxlength="200" required>
                         </li>
                         <li>
                             <input id="submit" class="bg-dark text-white rounded-pill border-0 fs-5 p-2" type="submit" value="Valider votre commande">
