--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,54 +1,56 @@
-body{
+body {
     background-color: #f3e9f1;
 }
 
-a{
+a {
     color: black;
     font-size: 1.5rem;
     text-decoration: none;
 }
 
-a:hover{
+a:hover,
+a:focus {
     color: #e58300;
 }
 
-h1{
+h1 {
     font-size: 3rem;
     color: #e58300;
 }
 
-h2{
+h2 {
     font-size: 2rem;
     color: white;
 }
 
-h3{
+h3 {
     font-size: 3rem;
     color: #e58300;
 }
 
-.line{
+.line {
     height: 3px;
     background-color: #e58300;
 }
 
-.active{
+.active {
     text-decoration: underline;
 }
 
-.picture{
+.picture {
     height: 200px;
     overflow: hidden;
     object-fit: cover;
     object-position: center;
 }
 
-.hover:hover{
+.hover:hover,
+.hover:focus {
     transform: scale(1.05);
     transition: 500ms;
 }
 
-@media (max-width: 700px){
+@media (max-width: 700px) {
     table thead {
     display: none;
     }
@@ -63,5 +65,5 @@ h3{
     float: left;
     font-weight: bold;
     }
-    }
+}
 
