--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,19 +1,20 @@
 body {
     background-color: #f3e9f1;
-}
+}   
 
 a {
     color: black;
     font-size: 1.5rem;
     text-decoration: none;
-}
+}   
 
 a:hover,
 a:focus {
     color: #e58300;
 }
 
-h1 {
+h1,
+h3 {
     font-size: 3rem;
     color: #e58300;
 }
@@ -21,11 +22,6 @@ h1 {
 h2 {
     font-size: 2rem;
     color: white;
-}
-
-h3 {
-    font-size: 3rem;
-    color: #e58300;
 }
 
 .line {
